fixed pom dependencies and maven warnings